# crypto-balance

./: .env  .eslintrc.js  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  TODO.md  babel.config.json  docker-compose.yml  esbuild.js  init-db.js  package.json  pnpm-lock.yaml  webpack.config.js
frontend/: AreaChart.jsx  CheckBox.jsx  DataContainer.jsx  DatePicker.jsx  DougnutChart.jsx  VisibilityButton.jsx  helpers.js  index.jsx  style.css
frontend/components/: AreaChart.jsx  CheckBox.jsx  CustomTooltip.jsx  DataContainer.jsx  DatePicker.jsx  DonutChart.jsx  LoginScreen.jsx  VisibilityButton.jsx
src/: aggregate.rs  database.rs  main.rs  requests.rs  utils.rs
src/model/: binance.rs  database.rs  mod.rs  nomics.rs
static/: index.html
static/assets/: favicon.ai
