[package]
name = "crypto-balance"
version = "0.1.0"
authors = ["Corentin Girard <corentingirard.dev@gmail.com>"]

[dependencies]
rocket = "0.4.7"
rocket_contrib = { version = "0.4.7", features = ["json"], default-features = false }
reqwest = { version = "0.11.2", features = ["blocking", "json"] }
hmac = "0.10.1"
sha2 = "0.9.3"
hex = "0.4.3"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
mongodb = { version = "1.2.1", features = ["sync"], default-features = false }
chrono = "0.4.19"
