[package]
name = "crypto-balance"
version = "0.1.0"
authors = ["Corentin Girard <corentingirard.dev@gmail.com>"]
edition = "2018"

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
reqwest = { version = "0.11.3", features = ["json"] }
hmac = "0.11.0"
sha2 = "0.9.5"
hex = "0.4.3"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
mongodb = "2.0.0-beta.1"
chrono = "0.4.19"
dotenv = "0.15.0"
bson = { version = "2.0.0-beta.1", features = ["chrono-0_4"] }